--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <img id ="img" src="C:\Users\HP\Downloads\pic.JPG" alt="Italian Trulli">
+    <img id ="img" src="https://github.com/AbhishekRajpooot/Xmas/blob/main/pic.jpg" alt="Italian Trulli">
     <div class="content-container">
       <header class="header">
         <h1>Magical Christmas Wishes, Ria!</h1>
