--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <img id ="img" src="https://raw.githubusercontent.com/AbhishekRajpooot/Xmas/main/pic.jpg" alt="Italian Trulli">
+    <img id ="img" src="pic.jpg" alt="Italian Trulli">
     <div class="content-container">
       <header class="header">
         <h1>Magical Christmas Wishes, Ria!</h1>
