--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <img id ="img" src="pic.jpg" alt="Italian Trulli">
+    <img id ="img" src="https://i.pinimg.com/736x/de/d9/8c/ded98c41db8efc5dc437a85a6eb69e82.jpg" alt="Italian Trulli">
     <div class="content-container">
       <header class="header">
         <h1>Magical Christmas Wishes, Ria!</h1>
